fix jumpiness from sticky nav

--- a/www/source/stylesheets/_layout.scss
+++ b/www/source/stylesheets/_layout.scss
@@ -15,7 +15,11 @@ body.try-hab {
   }
 
   &.has-sticky-nav {
-    padding-top: $header-height;
+    padding-top: $header-height + 44;
+
+    .has-sidebar & {
+      padding-top: 0;
+    }
   }
 }
 
